# OpenAutoCore

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-working_aa  imgui.ini  runnec  runnec-gdb
OpenAutoSDK/: BUILD.bazel  CMakeLists.txt
OpenAutoSDK/include/aasdk/Channel/: Channel.hpp  IChannel.hpp  Promise.hpp
OpenAutoSDK/include/aasdk/Channel/Bluetooth/: BluetoothService.hpp  IBluetoothService.hpp  IBluetoothServiceEventHandler.hpp
OpenAutoSDK/include/aasdk/Channel/Control/: ControlServiceChannel.hpp  IControlServiceChannel.hpp  IControlServiceChannelEventHandler.hpp
OpenAutoSDK/include/aasdk/Channel/GenericNotification/: GenericNotificationService.hpp  IGenericNotificationService.hpp  IGenericNotificationServiceEventHandler.hpp
OpenAutoSDK/include/aasdk/Channel/InputSource/: IInputSourceService.hpp  InputSourceService.hpp
OpenAutoSDK/include/aasdk/Channel/MediaBrowser/: IMediaBrowserService.hpp  IMediaBrowserServiceEventHandler.hpp  MediaBrowserService.hpp
OpenAutoSDK/include/aasdk/Channel/MediaPlaybackStatus/: IMediaPlaybackStatusService.hpp  IMediaPlaybackStatusServiceEventHandler.hpp  MediaPlaybackStatusService.hpp
OpenAutoSDK/include/aasdk/Channel/MediaSource/: IMediaSourceService.hpp  IMediaSourceServiceEventHandler.hpp  MediaSourceService.hpp
OpenAutoSDK/include/aasdk/Channel/NavigationStatus/: INavigationStatusService.hpp  INavigationStatusServiceEventHandler.hpp  NavigationStatusService.hpp
OpenAutoSDK/include/aasdk/Channel/PhoneStatus/: PhoneStatusService.hpp  (+2 more)
OpenAutoSDK/include/aasdk/Common/: AsioCompat.hpp
OpenAutoSDK/include/aasdk/Error/: Error.hpp
OpenAutoSDK/include/aasdk/IO/: Promise.hpp  PromiseLink.hpp
OpenAutoSDK/include/aasdk/Messenger/: ChannelReceiveMessageQueue.hpp  ChannelReceivePromiseQueue.hpp  Cryptor.hpp  FrameHeader.hpp  FrameSize.hpp  ICryptor.hpp  IMessageInStream.hpp  IMessageOutStream.hpp  IMessenger.hpp  InputSourceMessageHandlers.hpp  MediaSinkVideoMessageHandlers.hpp  Message.hpp  MessageId.hpp  MessageInStream.hpp  MessageInStreamInterceptor.hpp  MessageOutStream.hpp  MessageSender.hpp  MessageSenderLocator.hpp  Messenger.hpp  Promise.hpp  Timestamp.hpp
OpenAutoSDK/include/aasdk/TCP/: ITCPEndpoint.hpp  ITCPWrapper.hpp  TCPEndpoint.hpp  TCPWrapper.hpp
OpenAutoSDK/include/aasdk/Transport/: DataSink.hpp  ITransport.hpp  SSLWrapper.hpp  TCPTransport.hpp  Transport.hpp  USBTransport.hpp
OpenAutoSDK/include/aasdk/USB/: AOAPDevice.hpp  AccessoryModeProtocolVersionQuery.hpp  AccessoryModeQuery.hpp  AccessoryModeQueryChain.hpp  AccessoryModeQueryChainFactory.hpp  AccessoryModeQueryFactory.hpp  AccessoryModeSendStringQuery.hpp  AccessoryModeStartQuery.hpp  ConnectedAccessoriesEnumerator.hpp  IAOAPDevice.hpp  IAccessoryModeQuery.hpp  IAccessoryModeQueryChain.hpp  IAccessoryModeQueryChainFactory.hpp  IAccessoryModeQueryFactory.hpp  IConnectedAccessoriesEnumerator.hpp  IUSBEndpoint.hpp  IUSBHub.hpp  USBEndpoint.hpp  USBHub.hpp  USBWrapper.hpp
OpenAutoSDK/src/Channel/: Channel.cpp
OpenAutoSDK/src/Channel/Bluetooth/: BluetoothService.cpp
OpenAutoSDK/src/Channel/Control/: ControlServiceChannel.cpp
OpenAutoSDK/src/Channel/GenericNotification/: GenericNotification.cpp
OpenAutoSDK/src/Channel/InputSource/: InputSourceService.cpp
OpenAutoSDK/src/Channel/MediaBrowser/: MediaBrowserService.cpp
OpenAutoSDK/src/Channel/MediaPlaybackStatus/: MediaPlaybackStatusService.cpp
OpenAutoSDK/src/Channel/MediaSource/: MediaSourceService.cpp
OpenAutoSDK/src/Channel/NavigationStatus/: NavigationStatusService.cpp
OpenAutoSDK/src/Channel/PhoneStatus/: PhoneStatusService.cpp
OpenAutoSDK/src/Channel/Radio/: RadioService.cpp
OpenAutoSDK/src/Channel/SensorSource/: SensorSourceService.cpp
OpenAutoSDK/src/Channel/VendorExtension/: VendorExtensionService.cpp
OpenAutoSDK/src/Channel/WifiProjection/: WifiProjectionService.cpp
OpenAutoSDK/src/Common/: Data.cpp
OpenAutoSDK/src/Error/: Error.cpp
OpenAutoSDK/src/IO/: IOContextWrapper.cpp
OpenAutoSDK/src/Messenger/: ChannelId.cpp  ChannelReceiveMessageQueue.cpp  ChannelReceivePromiseQueue.cpp  Cryptor.cpp  FrameHeader.cpp  FrameSize.cpp  FrameType.cpp  MediaSinkVideoMessageHandlers.cpp  MediaSinkVideoMessageHandlers.hpp  Message.cpp  MessageId.cpp  MessageInStream.cpp  MessageInStream.ut.cpp  MessageInStreamInterceptor.cpp  MessageOutStream.cpp  MessageOutStream.ut.cpp  MessageSender.cpp  MessageSenderLocator.cpp  Messenger.cpp  Messenger.ut.cpp  ServiceId.cpp  Timestamp.cpp
OpenAutoSDK/src/Messenger/handlers/: BluetoothMessageHandlers.cpp  GenericNotificationMessageHandlers.cpp  GuidanceAudioMessageHandlers.cpp  InputSourceMessageHandlers.cpp  InputSourceMessageHandlers.hpp  MediaBrowserMessageHandlers.cpp  MediaPlaybackStatusMessageHandlers.cpp  MediaSinkAudioMessageHandlers.cpp  MediaSinkVideoMessageHandlers.cpp  MediaSourceMessageHandlers.cpp  NavigationStatusMessageHandlers.cpp  PhoneStatusMessageHandlers.cpp  RadioMessageHandlers.cpp  SensorMessageHandlers.cpp  SystemAudioMessageHandlers.cpp  TelephonyAudioMessageHandlers.cpp  VendorExtensionMessageHandlers.cpp
OpenAutoSDK/src/TCP/: TCPEndpoint.cpp  TCPEndpoint.ut.cpp  TCPWrapper.cpp
OpenAutoSDK/src/Transport/: DataSink.cpp  SSLWrapper.cpp  TCPTransport.cpp  TCPTransport.ut.cpp  Transport.cpp  USBTransport.cpp  USBTransport.ut.cpp
OpenAutoSDK/src/USB/: AOAPDevice.cpp  AOAPDevice.ut.cpp  AccessoryModeProtocolVersionQuery.cpp  AccessoryModeProtocolVersionQuery.ut.cpp  AccessoryModeQuery.cpp  AccessoryModeQueryChain.cpp  AccessoryModeQueryChain.ut.cpp  AccessoryModeQueryChainFactory.cpp  AccessoryModeQueryFactory.cpp  AccessoryModeSendStringQuery.cpp  AccessoryModeSendStringQuery.ut.cpp  AccessoryModeStartQuery.cpp  AccessoryModeStartQuery.ut.cpp  ConnectedAccessoriesEnumerator.cpp  ConnectedAccessoriesEnumerator.ut.cpp  USBEndpoint.cpp  USBEndpoint.ut.cpp  USBHub.cpp  USBHub.ut.cpp  USBWrapper.cpp
src/autoapp/Transport/: BUILD.bazel  transport.cpp  transport.hpp  transport_demo.cpp  wire.capnp  wire.hpp
(+257 files in other folders)
