filegroup(
    name = "autoapp",
    srcs = ["bin/autoapp"],
    visibility = ["//visibility:public"],
)


cc_binary(
    name = "autoapp_bazel",
    srcs = glob([
        "src/**/*.cpp",
    ], exclude = [
        "bazel-*/**",
        "src/autoapp/autoapp.cpp",
    ]) + glob([
        "include/**/*.hpp",
    ], exclude = [
        "bazel-*/**",
    ]),
    includes = [
        "include",
        "include/Common",
        "include/btservice",
    ],
    copts = [
        "-include", "Common/AsioCompat.hpp",
        "-Wall",
        "-pedantic",
        "-fPIC",
        "-DBOOST_ALL_DYN_LINK",
        "-isystem/usr/include/libusb-1.0",
        "-isystem/usr/include/x86_64-linux-gnu",
        
    ],
    linkopts = [
        "-lusb-1.0",
        "-lssl",
        "-lcrypto",
        "-lboost_system",
        "-lboost_log",
        "-lboost_log_setup",
        "-lboost_thread",
        "-lboost_filesystem",
        "-lz",
        "-pthread",
    ],
    deps = [
        "//OpenAutoSDK:aap_protobuf_cc",
        "//OpenAutoSDK:aasdk",
        "@libell_src//:ell",
    ],
    visibility = ["//visibility:public"],
)

