load("@rules_cc//cc:defs.bzl", "cc_binary")

filegroup(
    name = "autoapp",
    srcs = ["bin/autoapp"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "openautocore",
    srcs = glob([
        "src/**/*.cpp",
    ], exclude = [
        "bazel-*/**",
        "src/autoapp/autoapp.cpp",
    ]) + glob([
        "include/**/*.hpp",
    ], exclude = [
        "bazel-*/**",
    ]),
    includes = [
        "include",
        "include/Common",
        "include/btservice",
    ],
    copts = [
        "-include", "Common/AsioCompat.hpp",
        "-Wall",
        "-pedantic",
        "-fPIC",
    ],
    deps = [
        "//OpenAutoSDK:aap_protobuf_cc",
        "//OpenAutoSDK:aasdk",
        "@libell_src//:ell",
        "@boost.asio//:boost.asio",
        "@boost.filesystem//:boost.filesystem",
        "@boost.log//:boost.log",
        "@boost.system//:boost.system",
        "@boost.thread//:boost.thread",
        "@libusb//:libusb",
        "@openssl//:ssl",
        "@openssl//:crypto",
    ],
    visibility = ["//visibility:public"],
)

