module(
    name = "openautocore",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_python", version = "0.39.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "libusb", version = "1.0.28")
bazel_dep(name = "openssl", version = "3.5.4.bcr.0")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.system", version = "1.87.0")
bazel_dep(name = "boost.thread", version = "1.87.0")
bazel_dep(name = "boost.filesystem", version = "1.87.0")
bazel_dep(name = "boost.log", version = "1.87.0")
bazel_dep(name = "boost.circular_buffer", version = "1.87.0")

# rules_foreign_cc 0.10.1 is known-good with this codebase; pin via override to
# ensure consistent checksum under Bzlmod.
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# Hermetic C++ toolchain (dev-only for this repo; not required by consumers).
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.0", dev_dependency = True)

# OpenAutoTransport shared-memory transport for video/audio/data piping.
bazel_dep(name = "open_auto_transport", version = "0.0.25")

# Cap'n Proto runtime
bazel_dep(name = "capnp-cpp", version = "1.1.0")

# Platforms repo for cross-compilation targets.
bazel_dep(name = "platforms", version = "0.0.11")

toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(toolchains, "zig_sdk")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "libell_src",
    remote = "https://git.kernel.org/pub/scm/libs/ell/ell.git",
    commit = "2e254f51bd82c28f8a2132d58a960fb6b0887f79",
    shallow_since = "2025-11-21T15:00:47+01:00",
    build_file = "@//third_party:ell.BUILD.bazel",
)

git_override(
    module_name = "open_auto_transport",
    remote = "https://github.com/buzzcola3/OpenAutoTransport.git",
    tag = "v0.0.25",
)

archive_override(
    module_name = "rules_foreign_cc",
    sha256 = "476303bd0f1b04cc311fc258f1708a5f6ef82d3091e53fd1977fa20383425a6a",
    strip_prefix = "rules_foreign_cc-0.10.1",
    urls = ["https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.10.1.tar.gz"],
)
