package(default_visibility = ["//visibility:public"])

proto_library(
    name = "aap_protobuf_proto",
    srcs = glob(["protobuf/aap_protobuf/**/*.proto"]),
    strip_import_prefix = "protobuf",
)

cc_proto_library(
    name = "aap_protobuf_cc",
    deps = [":aap_protobuf_proto"],
)

cc_library(
    name = "aasdk",
    srcs = glob([
        "src/**/*.cpp",
    ], exclude = [
        "src/**/*.ut.cpp",
    ]),
    hdrs = glob([
        "include/aasdk/**/*.hpp",
    ]),
    includes = [
        "include/aasdk",
    ],
    copts = [
        "-include", "Common/AsioCompat.hpp",
        "-Wall",
        "-pedantic",
        "-fPIC",
    ],
    deps = [
        ":aap_protobuf_cc",
        "@open_auto_transport//:open_auto_transport",
        "@nlohmann_json//:json",
        "@boost.asio//:boost.asio",
        "@boost.circular_buffer//:boost.circular_buffer",
        "@boost.filesystem//:boost.filesystem",
        "@boost.log//:boost.log",
        "@boost.system//:boost.system",
        "@boost.thread//:boost.thread",
        "@libusb//:libusb",
        "@openssl//:ssl",
        "@openssl//:crypto",
    ],
)
