genrule(
    name = "wire_capnp_gen",
    srcs = ["wire.capnp"],
    outs = [
        "wire.capnp.h",
        "wire.capnp.c++",
    ],
    tools = [
        "@capnp-cpp//src/capnp:capnp_tool",  # capnp CLI
        "@capnp-cpp//src/capnp:capnpc-c++",  # C++ plugin
    ],
    cmd = """
      $(location @capnp-cpp//src/capnp:capnp_tool) compile \
        --src-prefix=src/autoapp/Transport \
        -o$(location @capnp-cpp//src/capnp:capnpc-c++):$(@D) \
        $(location wire.capnp)
    """,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "wire_capnp",
    srcs = ["wire.capnp.c++"],
    hdrs = ["wire.capnp.h"],
    includes = ["."],     # allow #include "wire.capnp.h"
    copts = ["-xc++"],    # ensure .c++ compiles as C++
    deps = [
        "@capnp-cpp//src/capnp:capnp",
        "@capnp-cpp//src/kj:kj",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "transport",
    srcs = ["transport.cpp"],
    hdrs = ["transport.hpp"],
    include_prefix = "buzz/autoapp/Transport",  # consumers can #include <buzz/autoapp/Transport/transport.hpp>
    copts = [
        "-fPIC",
    ],
    deps = [
        ":wire_capnp",
        "@capnp-cpp//src/capnp:capnp",
        "@capnp-cpp//src/kj:kj",
    ],
    visibility = ["//visibility:public"],
)