genrule(
    name = "wire_capnp_gen",
    srcs = ["wire.capnp"],
    outs = [
        "wire.capnp.h",
        "wire.capnp.c++",
    ],
    tools = [
        "@capnp-cpp//src/capnp:capnp_tool",
        "@capnp-cpp//src/capnp:capnpc-c++",
    ],
    cmd = """
      $(location @capnp-cpp//src/capnp:capnp_tool) compile \
        --src-prefix=src/autoapp/Transport \
        -o$(location @capnp-cpp//src/capnp:capnpc-c++):$(@D) \
        $(location wire.capnp)
    """,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "wire_capnp",
    srcs = ["wire.capnp.c++"],
    hdrs = ["wire.capnp.h"],
    includes = ["."],
    copts = ["-xc++"],
    deps = [
        "@capnp-cpp//src/capnp:capnp",
        "@capnp-cpp//src/kj:kj",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "transport",
    srcs = ["transport.cpp"],
    hdrs = ["transport.hpp", "wire.hpp"],
    include_prefix = "buzz/autoapp/Transport",
    copts = ["-fPIC"],
    deps = [
        ":wire_capnp",
        "@boost.asio",
        "@capnp-cpp//src/capnp:capnp",
        "@capnp-cpp//src/kj:kj",
        "@capnproto_shm_transport",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "transport_demo",
    srcs = ["transport_demo.cpp"],
    deps = [
        ":transport",
        ":wire_capnp",
        "@capnp-cpp//src/capnp:capnp",
        "@capnp-cpp//src/kj:kj",
        "@capnproto_shm_transport",
        "@boost.asio",
    ],
)